# Visual_Odometry

./: CMakeLists.txt  README.md  utils.py
exec/: delta_comparison.txt  evaluation.txt  evaluation_map.txt  result_map.txt  show_delta.py  show_map.py  show_trajectory.py  trajectory_complete.txt  world.txt
exec/result_txt/: evaluation.txt  evaluation_map.txt  result_map_scaled.txt  trajectory_complete.txt  trajectory_complete_scaled.txt  trajectory_gt.txt  world.txt  world_scaled.txt
include/: PointCloud.h  camera.h  defs.h  epipolar_geometry.h  picp_solver.h  utils_evaluation.h  utils_file.h  utils_map.h  utils_world.h
include/kdtree/: CMakeLists.txt  brute_force_search.h  eigen_01_point_loading.h  eigen_covariance.h  eigen_kdtree.h  eigen_kdtree_test.cpp  kd_simple.h  plane_side_predicate.h
include/kdtree/old_2/: brute_force_search.h  eigen_kdtree.h
src/: camera.cpp  epipolar_geometry.cpp  picp_solver.cpp  utils_evaluation.cpp  utils_file.cpp  utils_map.cpp  utils_world.cpp
src/test_file/: eigen_kdtree_test.cpp  test_camera.cpp  test_correspondences.cpp  test_epipolar_geometry.cpp  test_epipolar_geometry_fake.cpp  test_kdtree.cpp  test_picp.cpp  test_picp_fake.cpp  test_utils_evaluation.cpp  test_utils_file.cpp  vo_system.cpp  vo_system_evaluation.cpp  vo_system_evaluation_map.cpp  vo_system_fake.cpp
